# FileBrowser

./: .gitignore  README.md  meson.build  org.gnome.Katana.json
Model/: DirectoryMenu.vala  DirectoryNavigator.vala  meson.build
data/: org.gnome.Katana.appdata.xml.in
src/: Page.ui  Page.ui~  Page.vala  RowWidget.vala  main.vala  meson.build  window.ui  window.ui~  window.vala
src/Console_app/: DirectoryMenu.vala  Katana.Nim  meson.build
src/Controllers/: MainController.vala  SelectedFiles.vala
src/Model/: DirectoryNavigator.vala  DirectoryRepository.vala  FolderMonitoring.vala  Helpers.vala  Item.vala  meson.build
src/Views/: Page.vala  RowWidget.vala  meson.build  window.ui  window.ui~  window.vala
